Finished the update handler for blogs
