# controllers/blogs.go
@@ -21,7 +21,7 @@ func NewBlogsController() BlogsController {
 // @Description Creates a new blog site to be managed by this backend. Authentication is required to use this endpoint.
 // @Success 201 {object} models.Blog
 // @Failure 401 {object} controllers.ControllerError Returns if an invalid token is provided with the request.
-// @Failure 422 {object} controllers.ControllerError Returns if a site with this URL is already being managed.
+// @Failure 422 {object} controllers.ControllerError Returns if there are problems with the provided object to save.
 // @Failure 500 {object} controllers.ControllerError Returns if there is an unknown issue with the database.
 // @Router /sites [post]
 func (bc BlogsController) Create(c *gin.Context) {
@@ -29,7 +29,8 @@ func (bc BlogsController) Create(c *gin.Context) {
 
 	if err := c.ShouldBind(&blog); err != nil {
 		logrus.WithFields(logrus.Fields{
-			"endpoint": "/api/blogs/v1/sites/create",
+			"module": "controllers",
+			"endpoint": "POST /api/blogs/v1/sites/",
 			"error":    err,
 		}).Error("failed to bind Blog object")
 		c.AbortWithStatusJSON(http.StatusBadRequest, ControllerError{"error": "request body is malformed"})
@@ -39,6 +40,7 @@ func (bc BlogsController) Create(c *gin.Context) {
 	r := database.DB.Create(&blog)
 	if r.Error != nil {
 		logrus.WithFields(logrus.Fields{
+			"module": "controllers",
 			"endpoint": "POST /api/blogs/v1/sites/",
 			"error":    r.Error,
 		}).Error("failed to create Blog object")
@@ -77,6 +79,7 @@ func (bc BlogsController) List(c *gin.Context) {
 
 	if r.Error != nil {
 		logrus.WithFields(logrus.Fields{
+			"module": "controllers",
 			"endpoint": "GET /api/blogs/v1/sites/",
 			"error":    r.Error,
 		}).Error("Failed to retrieve Blog objects from database")
@@ -94,21 +97,83 @@ func (bc BlogsController) List(c *gin.Context) {
 	}
 }
 
-// Blog fetch handler.
-// @Summary Fetch data regarding this blog.
-// @Description Retrieve the blog, all authors that write for this blog and their bios, and the ten most recent post
-// @Description titles (with their slugs) published on this blog. Authentication is not required for this endpoint.
+// Blog update handler.
+// @Summary Edit data pertaining to a managed blog.
+// @Description This endpoint is used to update the name or domain name of a managed blog. Authentication is required.
 // @Success 200 {object} models.Blog
 // @Failure 401 {object} controllers.ControllerError Returns if an invalid token is provided with the request.
-// @Failure 404 {object} controllers.ControllerError Returns if no blog exists at the given domain.
+// @Failure 404 {object} controllers.ControllerError Returns if the lookup domain doesn't point to a managed blog.
+// @Failure 422 {object} controllers.ControllerError If there are problems with the updated object.
 // @Failure 500 {object} controllers.ControllerError Returns if there is an unknown issue with the database.
-// @Router /sites/{domain} [get]
-func (bc BlogsController) Fetch(c *gin.Context) {
-	c.String(http.StatusNotImplemented, "Endpoint not yet implemented.")
-}
-
+// @Router /sites/{domain} [put]
 func (bc BlogsController) Update(c *gin.Context) {
-	c.String(http.StatusNotImplemented, "Endpoint not yet implemented.")
+	var blog models.Blog
+
+	r := database.DB.Where("domain = ?", c.Param("blog_domain")).First(&blog)
+	if r.RowsAffected == 0 {
+		logrus.WithFields(logrus.Fields{
+			"module": "controllers",
+			"endpoint": fmt.Sprintf("PUT /api/blogs/v1/sites/%s", c.Param("blog_domain")),
+		}).Error("Blog to update was not found.")
+
+		c.AbortWithStatusJSON(
+			http.StatusNotFound,
+			ControllerError{
+				"error": fmt.Sprintf("%s is not managed by this backend.", c.Param("blog_domain")),
+			},
+		)
+
+		return
+	}
+
+	logrus.WithFields(logrus.Fields{
+		"module": "controllers",
+		"endpoint": fmt.Sprintf("PUT /api/blogs/v1/sites/%s", c.Param("blog_domain")),
+		"update_value": MarshalForLog(blog),
+	}).Debug(fmt.Sprintf("Retrieved %s from database.", c.Param("blog_domain")))
+
+
+	if err := c.ShouldBind(&blog); err != nil {
+		logrus.WithFields(logrus.Fields{
+			"module": "controllers",
+			"endpoint": fmt.Sprintf("PUT /api/blogs/v1/sites/%s", c.Param("blog_domain")),
+			"error":    err,
+		}).Error("failed to bind Blog object")
+		c.AbortWithStatusJSON(http.StatusBadRequest, ControllerError{"error": "request body is malformed"})
+		return
+	}
+
+	logrus.WithFields(logrus.Fields{
+		"module": "controllers",
+		"endpoint": fmt.Sprintf("PUT /api/blogs/v1/sites/%s", c.Param("blog_domain")),
+		"update_value": MarshalForLog(blog),
+	}).Debug(fmt.Sprintf("%s will be updated.", c.Param("blog_domain")))
+
+	r = database.DB.Save(&blog)
+	if r.Error != nil {
+		logrus.WithFields(logrus.Fields{
+			"module": "controllers",
+			"endpoint": fmt.Sprintf("PUT /api/blogs/v1/sites/%s", c.Param("blog_domain")),
+			"error":    r.Error,
+		}).Error("failed to create Blog object")
+		if ve, ok := r.Error.(validation.Errors); ok {
+			c.AbortWithStatusJSON(
+				http.StatusUnprocessableEntity,
+				ControllerError{"field_errors": ve},
+			)
+		} else if r.Error.Error() == "pq: duplicate key value violates unique constraint \"blogs_url_key\"" {
+			c.AbortWithStatusJSON(http.StatusUnprocessableEntity,
+				ControllerError{
+					"error": fmt.Sprintf("A blog at %s already exists", blog.Domain),
+				},
+			)
+		} else {
+			c.AbortWithStatusJSON(http.StatusInternalServerError, ControllerError{"error": "failed to update blog"})
+		}
+		return
+	}
+
+	c.JSON(http.StatusOK, blog)
 }
 
 func (bc BlogsController) Delete(c *gin.Context) {
